# 2d-Heat-Equation-grid-solution-in-C-with-MPI-and-VTK-PVD-visualisation

./: .gitignore
2dHeatEquationV3/: 2dHeatEquationV3.cpp  2dHeatEquationV3.h  CMakeLists.txt
